Add Lexer type and some creation methods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,7 @@
 [package]
 name = "noded-objects"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Jonathan <jonathan.frere@gmail.com>"]
+
+[dependencies]
+regex = "0.1.*"
