--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,19 @@ rust:
 matrix:
   allow_failure:
     - rust: nightly
+
+after_success: |
+  # doc-building script
+
+  ## make sure we're allowed to build docs
+  [ $TRAVIS_BRANCH = master ] &&  # don't build docs if not on master
+  [ $TRAVIS_PULL_REQUEST = false ] && # don't build docs if this is a pull request
+
+  ## Construct docs
+  cargo doc &&
+  echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
+  # (that redirects the index page to the beginning of the docs, because rustdoc is weird)
+  sudo pip install ghp-import &&
+  ghp-import -n target/doc &&
+  sudo pip install ghp-import &&
+  ghp-import -n target/doc &&
