--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,4 @@ after_success: |
   ghp-import -n target/doc &&
   sudo pip install ghp-import &&
   ghp-import -n target/doc &&
+  git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
