--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ after_success: |
   ## make sure we're allowed to build docs
   [ $TRAVIS_BRANCH = master ] &&  # don't build docs if not on master
   [ $TRAVIS_PULL_REQUEST = false ] && # don't build docs if this is a pull request
+  [ $TRAVIS_RUST_VERSION = master ] && # only want to build on the master rust channel
 
   ## Construct docs
-  cargo doc &&
+  cargo doc --no-deps &&
   echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
   # (that redirects the index page to the beginning of the docs, because rustdoc is weird)
   sudo pip install ghp-import &&
