Privatise attributes and subnodes for `Document`/`Node`
Plus additional methods to replace the missing functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/MrJohz/figtree"
 
 readme = "README.md"
 
-keyword = ["config", "configuration", "figtree"]
+keywords = ["config", "configuration", "figtree"]
 
 [dependencies]
 matches = "0.1.*"
