--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,6 @@ after_success: |
   cargo doc --no-deps &&
   echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
   # (that redirects the index page to the beginning of the docs, because rustdoc is weird)
-  sudo pip install ghp-import &&
-  ghp-import -n target/doc &&
-  sudo pip install ghp-import &&
+  pip install ghp-import &&
   ghp-import -n target/doc &&
   git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
