--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ matrix:
   allow_failure:
     - rust: nightly
 
+before_script:
+  - "export PATH=$HOME/.local/bin:$PATH"
+
 after_success: |
   # doc-building script
 
@@ -21,6 +24,6 @@ after_success: |
   cargo doc --no-deps &&
   echo "<meta http-equiv=refresh content=0;url=`echo $TRAVIS_REPO_SLUG | cut -d '/' -f 2`/index.html>" > target/doc/index.html &&
   # (that redirects the index page to the beginning of the docs, because rustdoc is weird)
-  pip install ghp-import &&
+  pip install ghp-import --user `whoami` &&
   ghp-import -n target/doc &&
   git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
